tests/test_files/invalid/semantic/unknown_parent_struct.pfdl
# Copyright The MF-Plugin Contributors
#
# Licensed under the MIT License.
# For details on the licensing terms, see the LICENSE file.
# SPDX-License-Identifier: MIT

Struct Test : UnknownStruct
    type : string
End

Task mainTask
    Test
End
